--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
             <td>R$50,00</td>
         </tr>
         <tr class="dados">
-            <td>Tenis</td>
+            <td>Tênis</td>
             <td>42</td>
             <td>R$10,00</td>
         </tr>
